@@ -8,3 +8,7 @@ line 3804 after "but-"
 
 Between the Acts
 line 1017 after preserve me!"
+
+The Years
+Line 1463 single quote changed to double quote at beginning of line
+Line 5402 added double quote after morning--'Pah!'"
